--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -68,6 +68,6 @@
     <p>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.</p>
     <p><strong>Contact Us</strong></p>
     <p>If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us (<a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="9cf3fafaf5fff9dcf1fde4f5b1eff3f0e9e8f5f3f2efb2fff3f1">[email&#160;protected]</a>).</p>
-<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
+<script data-cfasync="false" src="https://gitlab.com/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
 
 </html>
